--- a/src/main/resources/templates/halo.html
+++ b/src/main/resources/templates/halo.html
@@ -7,7 +7,10 @@
     </head>
 
     <body>
-            <h1 class="page-header"> Halo Spring boot</h1>
+            <h1 class="page-header"> fvsaddam was here!</h1>
+            <h3> test only </h3>
+            
+            
             <h2> 
                 waktu saat ini: 
                 <span th:text="${#calendars.format(sekarang, 'dd MMMM yyyy')}">
